--- a/css/common.css
+++ b/css/common.css
@@ -333,3 +333,12 @@ ul {
     border-radius: 5px;
     cursor: pointer;
 }
+
+.fs-page .banner {
+    font-size: 0;
+
+}
+.fs-page .banner img {
+    width: 100%;
+    height: auto;
+}
